# zxcv

./: Cargo.toml  LICENSE  README.md  zxcv.1
.github/workflows/: ci.yml
src/: bsky.rs  cgit.rs  config.rs  discourse.rs  gitea.rs  github.rs  gitweb.rs  html.rs  imgur.rs  lib.rs  lobsters.rs  main.rs  mastodon.rs  nextcloud.rs  stackoverflow.rs  wikimedia.rs
src/html/: escape_markdown.rs  squeeze_whitespace.rs  state.rs  table.rs
