[package]
name = "zxcv"
version = "0.1.0"
description = "View the essential content of a URL."
authors = ["Matthew Martin <phy1729@gmail.com>"]
license = "ISC"
repository = "https://github/phy1729/zxcv"
categories = ["command-line-utilities", "visualization"]
keywords = ["cli", "command", "url", "web"]
edition = "2021"

[dependencies]
anyhow = "1.0.14"
base64 = "0.22"
ego-tree = "0.6.2"
getopt = "1"
percent-encoding = "2.1"
pledge = "0.4"
scraper = { version = "0.19", default-features = false }
# Increased for toml
serde = { version = "1.0.145", features = ["derive"] }
tempfile = "3"
textwrap = "0.16"
toml = { version = "0.8", default-features = false, features = ["parse"] }
unicode-width = "0.1.10"
ureq = { version = "2.6.0", features = ["json"] }
url = "2.2.2"
