[package]
name = "zxcv"
version = "0.1.0"
description = "View the essential content of a URL."
authors = ["Matthew Martin <phy1729@gmail.com>"]
license = "ISC"
repository = "https://github/phy1729/zxcv"
categories = ["command-line-utilities", "visualization"]
keywords = ["cli", "command", "url", "web"]
edition = "2021"

[dependencies]
anyhow = "1.0.14"
# Increased for ureq
base64 = "0.22.1"
ego-tree = "0.10"
getopt = "1"
# Increased for ureq
percent-encoding = "2.3.1"
pledge = "0.4"
scraper = { version = "0.23", default-features = false }
# Increased for toml and ureq
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3"
textwrap = "0.16"
toml = { version = "0.8", default-features = false, features = ["parse"] }
unicode-width = "0.2"
ureq = { version = "3", features = ["json"] }
# Increased for ureq
url = "2.3.1"
