[package]
name = "zxcv"
version = "0.1.0"
description = "View the essential content of a URL."
authors = ["Matthew Martin <phy1729@gmail.com>"]
license = "ISC"
repository = "https://github/phy1729/zxcv"
categories = ["command-line-utilities", "visualization"]
keywords = ["cli", "command", "url", "web"]
edition = "2021"
include = [
  "/LICENSE",
  "/src",
  "/zxcv.1",
]

[dependencies]
anyhow = "1.0.14"
# Increased for ureq
base64 = "0.22.1"
ego-tree = "0.10"
getopt = "1"
# Increased for ureq
percent-encoding = "2.3.1"
pledge = "0.4"
scraper = { version = "0.23", default-features = false }
# Increased for toml and ureq
serde = { version = "1.0.204", features = ["derive"] }
# Increased for ureq
serde_json = "1.0.120"
tempfile = "3"
textwrap = "0.16"
toml = { version = "0.8", default-features = false, features = ["parse"] }
unicode-width = "0.2"
ureq = { version = "3", features = ["json"] }
# Increased for ureq
url = "2.3.1"

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unsafe_code = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
case_sensitive_file_extension_comparisons = "allow"
multiple_crate_versions = "allow"
pedantic = { level = "warn", priority = -1 }
str_to_string = "warn"
tests_outside_test_module = "warn"
unwrap_used = "warn"
use_self = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"
